# ftx-rs

./: .gitignore  Cargo.toml  README.md
examples/: README.md  ftx_endpoints.rs  ftx_websockets.rs
src/: account.rs  api.rs  client.rs  errors.rs  events.rs  fills.rs  futures.rs  lib.rs  markets.rs  model.rs  orders.rs  subaccounts.rs  wallet.rs  websockets.rs
